// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expense summary with one (1) expense 1`] = `
<div
  className="page-header"
>
  <div
    className="page-header__content content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $2.35
      </span>
    </h1>
    <Link
      className="button button--thin"
      replace={false}
      to="/create"
    >
      Add Expense
    </Link>
  </div>
</div>
`;

exports[`Should render expense summary with two (2) expense 1`] = `
<div
  className="page-header"
>
  <div
    className="page-header__content content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        23
      </span>
       
      expenses
       totalling 
      <span>
        $567,859,456.64
      </span>
    </h1>
    <Link
      className="button button--thin"
      replace={false}
      to="/create"
    >
      Add Expense
    </Link>
  </div>
</div>
`;
